<resources>
    <string name="app_name">TopTech</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="landing_page_laptop_image">Landing Page Laptop Image</string>
    <string name="top_tech_logo">Top Tech Logo</string>

    <!-- Registration -->
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="customer">Customer</string>
    <string name="administration">Administration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_text">Continue</string>
    <string name="go_to_landing_page">Go to Landing Page</string>
    <string name="account_type"><u>Account Type</u></string>
    <string name="admin_account">Admin Account</string>
    <string name="job_title">Job Title</string>
    <string name="employee_number">Employee Number</string>
    <string name="go_back">Go Back</string>
    <string name="customer_account">Customer Account</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2 (Optional)</string>
    <string name="address_line_3">Address Line 3 (Optional)</string>
    <string name="town_or_city">Town or City</string>
    <string name="eircode">Eircode</string>

    <string-array name="county_options">
        <item>County</item>
        <item>Antrim</item>
        <item>Armagh</item>
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Derry</item>
        <item>Donegal</item>
        <item>Down</item>
        <item>Dublin</item>
        <item>Fermanagh</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Tyrone</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_basket">Basket</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_add_new_stock">Add New Stock</string>
    <string name="nav_update_stock">Update Stock</string>
    <string name="nav_customer_details">Customer Details</string>

    <!-- Stock -->
    <string name="add_new_stock">Add New Stock</string>
    <string name="click_to_upload_image">Click to Upload Image</string>
    <string name="title">Title</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="price">Price €</string>
    <string name="price_two">Price</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="image_name">Image Name</string>
    <string name="choose">Choose Picture</string>
    <string name="cancel">Cancel</string>
    <string name="no_items_in_catalog">No items in catalog.</string>

    <!-- Search -->
    <string name="search">Search....</string>
    <string-array name="search_by_options">
        <item>Category</item>
        <item>Manufacturer</item>
        <item>Title</item>
    </string-array>

    <!-- Profile -->
    <string name="full_name">Full Name</string>
    <string name="purchase_history">Purchase History</string>
    <string name="payment_method">Payment Method</string>
    <string name="address">Address</string>

    <!-- Rating -->
    <string name="details">Details</string>
    <string name="comments">Comments</string>
    <string name="ratings">Ratings</string>
    <string name="leave_rating">Leave Rating</string>

    <!-- Comment -->
    <string name="type_a_message">Type Comment Here</string>
    <string name="username">Username</string>
    <string name="go_back_button">Go Back Button</string>
    <string name="stock_item_image">Stock Item Image</string>
    <string name="send_comment_button">Send comment button</string>

    <!-- Basket -->
    <string name="_1">1</string>
    <string name="checkout_basket">Checkout Basket</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_price">Total Price: €</string>
    <string name="shopping_basket_total">Shopping Basket Total €</string>
    <string name="items">Items</string>
    <string name="discount_code">Enter Discount Code</string>
    <string name="apply">Apply</string>
    <string name="secure_payment">Secure Payment</string>
    <string name="discount_applied">Discount Applied</string>
    <string name="subtotal">Subtotal: €</string>
    <string name="discount_amount">Discount Amount:</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="cardholder_s_name">Cardholder\'s Name</string>
    <string name="enter_cardholder_s_name">Enter Cardholder\'s Name</string>
    <string name="mm">MM</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="backslash">/</string>
    <string name="yy">YY</string>
    <string name="security_code">Security Code</string>
    <string name="blank_string" />

    <!-- Purchase History -->
    <string name="date">Date</string>
    <string name="item_title">Item Title</string>

    <!-- Update Stock -->
    <string name="update_stock_details">Update Stock Details</string>
    <string name="update">Update</string>

</resources>