<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_admin_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_admin_add_new_stock"
        android:icon="@drawable/ic_add_stock"
        android:title="@string/nav_add_new_stock" />
    <item
        android:id="@+id/nav_admin_update_stock"
        android:icon="@drawable/ic_update_circle"
        android:title="@string/nav_update_stock" />
    <item
        android:id="@+id/nav_admin_customer_details"
        android:icon="@drawable/ic_people"
        android:title="@string/nav_customer_details" />
    <item
        android:id="@+id/nav_customer_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />
</menu>