<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Basket.PaymentFragment">

    <RelativeLayout
        android:id="@+id/details_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_bottom"
        android:padding="5dp">

        <TextView
            android:id="@+id/subtotal_price_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/discount_amount_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtotal_price_tv"
            android:text="@string/discount_amount"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/total_price_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/discount_amount_tv"
            android:background="@drawable/border_bottom"
            android:text="@string/total_price"
            android:padding="5dp"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/card_details_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/total_price_tv"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/customer_border_white_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payment_details"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_margin="5dp"/>

            <LinearLayout
                android:id="@+id/card_number_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/card_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customer_border_white_background"
                    android:hint="@string/enter_card_number"
                    android:inputType="number"
                    android:maxLength="16"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardholders_name_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardholder_s_name"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/cardholders_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customer_border_white_background"
                    android:hint="@string/enter_cardholder_s_name"
                    android:inputType="textPersonName"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/expiry_date_month_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customer_border_white_background"
                        android:hint="@string/mm"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/backslash"
                        android:textSize="26sp"
                        android:layout_gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/expiry_date_year_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customer_border_white_background"
                        android:hint="@string/yy"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/security_code_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security_code"
                    android:textSize="12sp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/security_code_et"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/customer_border_white_background"
                        android:hint="@string/blank_string"
                        android:inputType="number"
                        android:maxLength="4"
                        android:textSize="12sp"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/credit_card_cvv"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/details_ll"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <Button
            android:id="@+id/checkout_basket_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkout_basket"
            android:textSize="12sp"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:layout_margin="2dp"/>
    </LinearLayout>
</RelativeLayout>