<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/topTech_logo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/top_tech_logo" />

    <ImageView
        android:id="@+id/landing_page_image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/landing_page_image"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/topTech_logo"
        android:contentDescription="@string/landing_page_laptop_image" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/landing_page_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_button"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/transparent_button"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</RelativeLayout>