<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/purchase_history_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/purchase_history_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/purchase_history_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/items_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/purchase_history_date"
                android:layout_centerHorizontal="true"
                android:text="@string/items"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/items_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/items_title_tv"
                android:layout_centerHorizontal="true"
                android:text="@string/items"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/payment_method_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/items_tv"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="@string/payment_method"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/payment_method_tv"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/card_number_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/expiry_date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expiry_date"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"/>
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>