<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/go_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_arrow_back"
            android:focusable="true"
            android:clickable="true"
            android:backgroundTint="@color/transparent"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:maxImageSize="30dp"
            app:fabSize="mini"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/upload_picture"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/image_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_rl"
        android:hint="@string/image_name"
        app:startIconDrawable="@drawable/ic_image"
        app:startIconTint="@color/black"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/grey"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/image_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/choose_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_name"
        android:text="@string/choose"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>